--- a/document.html
+++ b/document.html
@@ -38,6 +38,7 @@
     </main>
     <footer>
         <p>&copy; 2024 Perusahaan Kami. Semua hak cipta dilindungi.</p>
+        <p>test1</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
