--- a/document.html
+++ b/document.html
@@ -39,6 +39,7 @@
     <footer>
         <p>&copy; 2024 Perusahaan Kami. Semua hak cipta dilindungi.</p>
         <p>test1</p>
+        <p>test2</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
